--- a/src/style/_normalize.scss
+++ b/src/style/_normalize.scss
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: black;
+  font-family: Roboto, serif;
 }
 
 a,
